--- a/templates/covidresponse.html
+++ b/templates/covidresponse.html
@@ -30,7 +30,7 @@
     <form method="POST" action="" class="d-flex justify-content-center align-items-center">
         {% csrf_token %}
         <select class="form-select" style="width: 200px; margin-right: 5px" class="form-control" name='selectedcountry'>
-                {% for country in mylist %}
+                {% for country in mylist|dictsort:"name" %}
                 <option>{{country}}</option>
                 {% endfor %}
         </select>
